Creado mediante Colaboratory

--- a/Copia_de_Exepciones.ipynb
+++ b/Copia_de_Exepciones.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "E4RkxgKRNgsv"
       },
@@ -44,27 +44,10 @@
         "dividir(2,0)"
       ],
       "metadata": {
-        "id": "SASNHxFbNr8r",
-        "outputId": "10918b36-3ead-42cf-9649-085162bcb8bf",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 165
-        }
+        "id": "SASNHxFbNr8r"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-2c182690bc82>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdividir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'dividir' is not defined"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -97,16 +80,31 @@
       "source": [
         "try:\n",
         "    #Funcion\n",
+        "    res = dividir(3,0)\n",
         "    #Imprimir resultado\n",
         "    print(res)\n",
         "except ZeroDivisionError:\n",
-        "    # imprimir mensaje\n"
+        "    # imprimir mensaje\n",
+        "    print(\"Division por cero\")\n"
       ],
       "metadata": {
-        "id": "CdpxhRo3O04G"
+        "id": "CdpxhRo3O04G",
+        "outputId": "858b0364-cd4d-4f5b-a209-141aa3494e7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Division por cero\n"
+          ]
+        }
+      ]
     }
   ]
 }
